Merge pull request #1080 from OSGP/feature/SMHE-1613_Get_scaler_from_object_config
SMHE-1613 Get scaler from object config